// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`format should omit a source code if the error line is over 100 characters 1`] = `
"const is a reserved word
[1:110] aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa = () => {}; // bbbbbbbbbbbbbbbbbbbbbbbbbbbbbb"
`;

exports[`format should return a formatted message 1`] = `
"const is a reserved word
[2:0] const foo = () => {}"
`;

exports[`format should return a formatted message if loc is not defined 1`] = `"const is a reserved word"`;
